updated for better dbc and header choice

--- a/inClass/3_02_2015/includes/header_admin.html
+++ b/inClass/3_02_2015/includes/header_admin.html
@@ -7,7 +7,7 @@
 	</div>
 	<div id = "navigation">
 		<ul>
-			<li><a href = "student.php">Home page</a></li>
+			<li><a href = "admin.php">Home page</a></li>
 			<li><a href = "edit_profile.php">Edit Profile</a></li>
 			<li><a href = "change_password.php">Change Password</a></li>
 			<li><a href = "add_classes.php">Add Classes</a></li>
